--- a/architects.css
+++ b/architects.css
@@ -28,7 +28,7 @@ align-items: center;
   text-decoration: none;
 }
 .text-gray{
-  color: #424242;
+  color: #b3adad;
 }
 .bg-light{
   background-color:rgb(241, 223, 201)
@@ -45,12 +45,23 @@ align-items: center;
   color: rgb(255, 127, 80);
 }
 .primary{
-  background-color: rgb(223, 169, 88);
+  background-color: rgb(235, 115, 3);
   color: white;
   padding: 20px 25px;
   font-size: 1.25rem;
   font-weight: 600;
   border-radius: 8px;
+}
+#experience-badge{
+  padding: 45px 42px;
+  font-size: 1.25rem;
+  font-weight: 500;
+  margin-left: -60px;
+  margin-top: -120px;
+}
+.experiience-year{
+  font-size: 4rem;
+  font-weight: 700;
 }
 .navbar .banner {
 max-width: 1440px;
@@ -89,7 +100,25 @@ font-size: 4rem;
 }
 #quick-list{
   font-weight: 500;
-  
+}
+#features-section-title{
+  border-left: 5px solid#ff900e;
+  padding-left: 20px;
+}
+.feature-card{
+  font-weight: 600;
+  font-size: 1.25rem;
+  padding: 30px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 15px 0#424242
+}
+.features{
+  margin: auto 350px;
+  gap: 80px;
+}
+.features img{
+  width: 100%;
 }
 .facts-container{
   display: flex;
@@ -160,5 +189,17 @@ align-items: center;
 .sponsor-companies{
   display: grid;
   grid-template-columns: repeat(1, 1fr);
+}
+#experience-badge{
+  margin-top: 20px;
+  margin-left: 20px;
+}
+.features{
+  display: grid;
+  grid-template-columns:repeat(1, 1fr);
+}
+.responsive{
+  display: flex;
+  justify-items: center;
 }
 }
